# empathy-cheese

./: .gitignore  .gitmodules  Makefile.am  NEWS  autogen.sh  configure.ac  release.py
data/: .gitignore  Empathy.Auth.client  Empathy.Call.client  Makefile.am  element-properties  empathy-accounts.desktop.in.in  empathy-log-window.html  empathy.convert  org.freedesktop.Telepathy.Client.Empathy.Call.service.in  org.freedesktop.Telepathy.Client.Empathy.FileTransfer.service.in  org.gnome.Empathy.gschema.xml.in
data/icons/: Makefile.am
extensions/: Chat_Manager.xml  Makefile.am  misc.xml
goa-mc-plugin/: Makefile.am  mcp-account-manager-goa.c  mcp-account-manager-goa.h  mission-control-plugin.c
help/: .gitignore  Makefile.am
help/ca/: ca.po
help/de/: de.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/pl/: pl.po
help/sl/: sl.po
help/zh_CN/: zh_CN.po
libempathy/: Makefile.am  action-chain-internal.h  action-chain.c  cheese-camera-device-monitor.c  cheese-camera-device-monitor.h  empathy-account-settings.c  empathy-account-settings.h  empathy-auth-factory.c  empathy-auth-factory.h  empathy-call-factory.c  empathy-call-factory.h  empathy-call-handler.c  empathy-call-handler.h  empathy-camera-monitor.c  empathy-camera-monitor.h  empathy-channel-factory.c  empathy-channel-factory.h  empathy-chatroom-manager.c  empathy-chatroom-manager.h  empathy-chatroom.c  empathy-client-factory.c  empathy-client-factory.h  empathy-connection-aggregator.c  empathy-connection-aggregator.h  empathy-connection-managers.c  empathy-connectivity.c  empathy-contact-list.c  empathy-contact-list.h  empathy-contact-manager.c  empathy-contact-manager.h  empathy-contact.c  empathy-contact.h  empathy-debug.c  empathy-debug.h  empathy-dispatcher.c  empathy-dispatcher.h  empathy-ft-factory.c  empathy-ft-factory.h  empathy-ft-handler.c  empathy-ft-handler.h  (+44 more)
libempathy-gtk/: Makefile.am  empathy-account-chooser.c  empathy-account-chooser.h  empathy-account-selector-dialog.c  empathy-account-selector-dialog.h  empathy-account-widget-aim.ui  empathy-account-widget-generic.ui  empathy-account-widget-groupwise.ui  empathy-account-widget-icq.ui  empathy-account-widget-irc.c  empathy-account-widget-irc.ui  empathy-account-widget-jabber.ui  empathy-account-widget-local-xmpp.ui  empathy-account-widget-msn.ui  empathy-account-widget-sip.c  empathy-account-widget-sip.h  empathy-account-widget-sip.ui  empathy-account-widget-yahoo.ui  empathy-account-widget.c  empathy-account-widget.h  empathy-avatar-chooser.c  empathy-avatar-chooser.h  empathy-avatar-image.c  empathy-bad-password-dialog.c  empathy-bad-password-dialog.h  empathy-base-password-dialog.c  empathy-base-password-dialog.h  empathy-call-utils.c  empathy-call-utils.h  empathy-cell-renderer-activatable.c  empathy-cell-renderer-expander.c  empathy-cell-renderer-text.c  empathy-chat-text-view.c  empathy-chat-text-view.h  empathy-chat-view.c  empathy-chat-view.h  empathy-chat.c  empathy-chat.h  empathy-contact-blocking-dialog.c  empathy-contact-blocking-dialog.h  (+92 more)
m4/: .gitignore
nautilus-sendto-plugin/: empathy-nautilus-sendto.c
po/: .gitignore  LINGUAS  POTFILES.in  an.po  ar.po  as.po  ast.po  be.po  bg.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  lt.po  lv.po  mr.po  my.po  nb.po  nl.po  (+22 more)
src/: .gitignore  Makefile.am  cc-empathy-accounts-panel.c  empathy-about-dialog.c  empathy-account-assistant.c  empathy-accounts-common.c  empathy-accounts-common.h  empathy-accounts-dialog.c  empathy-accounts-dialog.ui  empathy-accounts.c  empathy-audio-sink.c  empathy-audio-sink.h  empathy-audio-src.c  empathy-audio-src.h  empathy-auth-client.c  empathy-av.c  empathy-call-factory.c  empathy-call-factory.h  empathy-call-handler.c  empathy-call-handler.h  empathy-call-observer.c  empathy-call-observer.h  empathy-call-window-fullscreen.c  empathy-call-window-fullscreen.h  empathy-call-window.c  empathy-call-window.h  empathy-call-window.ui  empathy-call.c  empathy-camera-menu.c  empathy-camera-menu.h  empathy-chat-manager.c  empathy-chat-manager.h  empathy-chat-window.c  empathy-chat-window.h  empathy-chat.c  empathy-chatrooms-window.c  empathy-chatrooms-window.ui  empathy-debug-window.c  empathy-debug-window.h  empathy-debugger.c  (+47 more)
tests/: .gitignore  Makefile.am  empathy-chatroom-manager-test.c  empathy-tls-test.c
tests/interactive/: .gitignore  Makefile.am  contact-manager.c  empathy-logs.c  empetit.c  test-empathy-account-chooser.c  test-empathy-contact-blocking-dialog.c  test-empathy-status-preset-dialog.c
